@@ -454,5 +454,7 @@ def suite():
 
 
 if __name__ == '__main__':
+    import sys
+    common.parse_argv(sys.argv)
     common.print_versions()
     unittest.main(defaultTest='suite')
