@@ -94,6 +94,7 @@ Bugs fixed
   (see :issue:`353`)
 - Fix :meth:`Column.create_csindex` when there's NaNs
 - Fixed handling of unicode file names on windows (closes :issue:`389`)
+- No longer not modify :data:`sys.argv` at import time (closes :issue:`405`)
 
 
 Other changes
